# Satellite

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.fake_data  LICENSE  README.md  add_tables.py  add_test_tables.py  constants.py  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  fake.py  insert_every_n_seconds.py  post_create_comands.sh  print_sql_create_command.py  pyproject.toml  requirements.txt  tmp.sh  tmp.sql
.github/: pull_request_template.md
.github/linters/: .hadolint.yaml  .yaml-lint.yml  actionlint.yml
.github/workflows/: lint.yml  test.yml
satellite/: __init__.py  _column.py  _database.py  _fake.py  _log.py  _schema.py  _settings.py  _tables.py  _utils.py  main.py
satellite/tests/: __init__.py  test_column.py  test_schema.py  test_table.py  test_utils.py
